# wson

./: LICENSE  README.md  pyproject.toml  setup.py  wson.py
.github/: FUNDING.yml
.github/workflows/: python-publish.yml  workflow.yml
src/wson/: __init__.py  wson.py
wson/: __init__.py  wson.py
