[tool.poetry]
name = "wson"
version = "0.2.1"
description = "WSON (Web Simple Object Notation)"
authors = ["LunaStev <lunastev@gurmstudios.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "wson", from = "src"}]
repository = "https://github.com/lunastev/wson"

[tool.poetry.dependencies]
python = ">=3.0,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"